fixed relative path problem

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <!-- Logo du site avec lien vers la page d'accueil -->
           <div class="logo uppercase">
             <a
-              href="../index.html"
+              href="./index.html"
               aria-label="Lien vers la page principale"
               class="nav-link"
               >Branché</a
