fixed homepage title

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
 
     <!-- Titre de la page, optimisé pour le SEO -->
-    <title>Google déploie Veo et Imagen 3 | Branché</title>
+    <title>Accueil | Branché</title>
   </head>
   <body>
     <!-- En-tête de la page avec navigation principale -->
